Fix spacing in input text

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -45,6 +45,7 @@ body {
     border-color: transparent;
 
     font-size: x-large;
+    padding: 10px;
 }
 
 .new-item-input:focus {
